<resources>
    <string name="app_name">Recipes</string>
    <string name="ad_unit_id_M001_280_132_item_homescreen">ca-app-pub-5253357485536416/5747691295</string>
    <string name="admob_id">ca-app-pub-5253357485536416~1123239941</string>

    <string name="loading">Loading…</string>
    <string name="error_happened_try_again">Error happened. Please try again</string>
    <string name="retry">RETRY</string>
    <string name="APP_CONTINUE">Continue</string>
    <string name="APP_FILTERS">Filters</string>
    <string name="APP_SORT_BY">Sort by:</string>
    <string name="APP_DATE">Date</string>
    <string name="APP_RATING">Rating</string>
    <string name="APP_RELEVANCE">Relevance</string>
    <string name="APP_NAME">Name</string>
    <string name="APP_VIEWS">Views</string>
    <string name="APP_FILTER_BY">Filter by:</string>
    <string name="APP_APPLY_FILTERS">Apply Filters</string>
    <string name="APP_SIGN_IN_WITH_GOOGLE">Sign in with Google</string>
    <string name="APP_FILTER_TOOLTIP_MSG">Filter and sort recipes</string>
    <string name="APP_SEARCH_HINT">e.g. Avocado, Egg...</string>
    <string name="APP_FAVORITES">Favorites</string>

</resources>
