<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/snackbarContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.allrecipes.ui.filters.FiltersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/such_toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/activity_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme"
                app:theme="@style/ToolbarNormalStyle">

                <TextView
                    android:id="@+id/toolbar_title_textview"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/APP_FILTERS"
                    android:textColor="@color/white"/>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/filtersScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:descendantFocusability="blocksDescendants">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.allrecipes.custom.views.AllRecipesTextView
                        android:id="@+id/filterLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/d3"
                        android:text="@string/APP_FILTER_BY"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/s2_quarter"
                        app:customFont="fonts/Roboto-Medium.ttf"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/filter_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/d3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.allrecipes.custom.views.AllRecipesTextView
                        android:id="@+id/sortLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/d3"
                        android:text="@string/APP_SORT_BY"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/s2_quarter"
                        app:customFont="fonts/Roboto-Medium.ttf"/>

                    <RadioGroup
                        android:id="@+id/sortByGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/d3"
                        android:orientation="vertical">

                        <com.allrecipes.custom.views.AllRecipesRadioButton
                            android:id="@+id/radio_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/d0_half"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:text="@string/APP_DATE"
                            android:textColor="@color/primary_text"
                            app:customFont="fonts/Roboto-Regular.ttf"/>

                        <com.allrecipes.custom.views.AllRecipesRadioButton
                            android:id="@+id/radio_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/d0_half"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:text="@string/APP_RATING"
                            android:textColor="@color/primary_text"
                            app:customFont="fonts/Roboto-Regular.ttf"/>

                        <com.allrecipes.custom.views.AllRecipesRadioButton
                            android:id="@+id/radio_relevance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/d0_half"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:text="@string/APP_RELEVANCE"
                            android:textColor="@color/primary_text"
                            app:customFont="fonts/Roboto-Regular.ttf"/>

                        <com.allrecipes.custom.views.AllRecipesRadioButton
                            android:id="@+id/radio_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/d0_half"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:text="@string/APP_NAME"
                            android:textColor="@color/primary_text"
                            app:customFont="fonts/Roboto-Regular.ttf"/>

                        <com.allrecipes.custom.views.AllRecipesRadioButton
                            android:id="@+id/radio_view_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:text="@string/APP_VIEWS"
                            android:textColor="@color/primary_text"
                            app:customFont="fonts/Roboto-Regular.ttf"/>
                    </RadioGroup>

                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/buttonApplyFilters"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d7"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@drawable/button_bkg"
            android:text="@string/APP_APPLY_FILTERS"
            android:textColor="@color/white"
            android:textSize="@dimen/s2"
            tools:customFont="fonts/Roboto-Regular.ttf"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
